@@ -8,9 +8,12 @@ This package contains Docutils Reader modules.
 
 __docformat__ = 'reStructuredText'
 
+import sys
 
 from docutils import utils, parsers, Component
 from docutils.transforms import universal
+if sys.version_info < (2,5):
+    from docutils._compat import __import__
 
 
 class Reader(Component):
@@ -103,5 +106,5 @@ def get_reader_class(reader_name):
     reader_name = reader_name.lower()
     if reader_name in _reader_aliases:
         reader_name = _reader_aliases[reader_name]
-    module = __import__(reader_name, globals(), locals())
+    module = __import__(reader_name, globals(), locals(), level=1)
     return module.Reader
